--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -180,6 +180,13 @@
 	"dashboard.cash-box.output-money": "Вывести деньги",
 	"dashboard.cash-box.ur-password": "ваш пароль",
 	"dashboard.cash-box.wright-summ": "напишите сумму",
+	"dashboard.create-service.first-step.category-title": "Категория Вашей деятельности",
+	"dashboard.create-service.first-step.min-title-length": "из 70 максимально",
+	"dashboard.create-service.first-step.subtitle": "Название услуги",
+	"dashboard.create-service.first-step.title": "1. Титульная информация",
+	"dashboard.create-service.first-step.tool-tip.name-subtitle": "Оно должно отражать суть вашего предложения и описывать услугу, которую вы готовы выполнить.",
+	"dashboard.create-service.first-step.tool-tip.name-title": "Введите название услуги",
+	"dashboard.create-service.title": "Создание услуги",
 	"dashboard.finances.my-profit": "мой доход",
 	"dashboard.home-page.accaunt-statistic": "показатели аккаунта",
 	"dashboard.home-page.change-alailability-status": "Изменить статус можно здесь",
@@ -189,9 +196,22 @@
 	"dashboard.home-page.order-quantity": "Кол-во заказов",
 	"dashboard.home-page.projects-in-process": "Проектов в работе:",
 	"dashboard.home-page.projects-in-queue": "Проектов в очереди: ",
+	"dashboard.home-page.ranks.subtitle": "Уровень моего професионализма и тарифный план",
+	"dashboard.home-page.ranks.title": "Мои достижения",
 	"dashboard.home-page.show-details": "Узнать детали",
 	"dashboard.home-page.user-availability": "Статус доступности:",
 	"dashboard.home-page.user-status": "Статус вашего профиля",
+	"dashboard.offer-steps.fifth.description": "Добавьте вопросы для заказчика, которые предоставят Вам необходимую информацию, чтобы Вы могли приступить к заказу.",
+	"dashboard.offer-steps.fifth.title": "Бриф",
+	"dashboard.offer-steps.first.description": "Успех выбора Вашей услуги зависит насколько качественно и точно Вы назовёте услуги и заполните критерии поиска.",
+	"dashboard.offer-steps.first.title": "Титульная информация",
+	"dashboard.offer-steps.forth.description": "Составьте список часто задаваемых вопросов от клиентов.",
+	"dashboard.offer-steps.forth.title": "Часто задаваемые вопросы",
+	"dashboard.offer-steps.last.title": "Готово к публикации",
+	"dashboard.offer-steps.second.description": "Опишите услугу, которую вы предлагаете, как можно подробнее.",
+	"dashboard.offer-steps.second.title": "Описание услуги",
+	"dashboard.offer-steps.third.description": "Предложите покупателю три пакета услуг по разной цене.",
+	"dashboard.offer-steps.third.title": "Пакеты и цены",
 	"dashboard.payment-history.contragent": "Контрагент",
 	"dashboard.payment-history.date": "Дата операции",
 	"dashboard.payment-history.dealCanceled": "Отмена резервации средств",
@@ -204,6 +224,13 @@
 	"dashboard.payment-history.sum": "Сумма",
 	"dashboard.payment-history.title": "история платежей",
 	"dashboard.payment-history.type": "Тип операции",
+	"dashboard.services.change-service": "Редактировать",
+	"dashboard.services.create-service": "Создать услугу",
+	"dashboard.services.delete-service-title": "Вы действительно желаете удалить услугу",
+	"dashboard.services.empty-page-subtitle": "Чтобы начать работу, Вам необходимо создайть услугу.",
+	"dashboard.services.empty-page-title": "Страница пуста!",
+	"dashboard.services.hide-service": "Скрыть услугу",
+	"dashboard.services.title": "Мои услуги",
 	"dealRate.firstRateCustomerCount1": "Ужасно, услуга не соответствует описанию",
 	"dealRate.firstRateCustomerCount2": "Плохо, услуга разочаровала меня",
 	"dealRate.firstRateCustomerCount3": "Средне, могло быть и лучше",
@@ -240,9 +267,11 @@
 	"file-loader.load": "Загрузить",
 	"file-loader.load-file": "Загрузите файлы",
 	"file-loader.put-file-here": "Перетащите сюда файл",
-	"general.cancel": "ОТКЛОНИТЬ",
+	"general.cancel": "Отмена",
 	"general.congratulate": "Поздравляем",
 	"general.customer": "Заказчик",
+	"general.decline": "ОТКЛОНИТЬ",
+	"general.delete": "Удалить",
 	"general.enter": "Войти",
 	"general.exit": "Выйти",
 	"general.file": "Файл",
