--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -180,6 +180,13 @@
 	"dashboard.cash-box.output-money": " Ввести гроші",
 	"dashboard.cash-box.ur-password": "Ваш пароль",
 	"dashboard.cash-box.wright-summ": "напишіть суму",
+	"dashboard.create-service.first-step.category-title": "Категорія Вашої діяльності",
+	"dashboard.create-service.first-step.min-title-length": " з 70 максимально",
+	"dashboard.create-service.first-step.subtitle": "Назва послуги",
+	"dashboard.create-service.first-step.title": "1. Титульна інформація",
+	"dashboard.create-service.first-step.tool-tip.name-subtitle": "Воно повинно відображати суть вашої пропозиції і описувати послугу, яку ви готові виконати.",
+	"dashboard.create-service.first-step.tool-tip.name-title": "Введіть назву послуги",
+	"dashboard.create-service.title": "Створення послуги",
 	"dashboard.finances.my-profit": "мій дохід",
 	"dashboard.home-page.accaunt-statistic": "показники аккаунта",
 	"dashboard.home-page.change-alailability-status": "Змінити статус можна тут",
@@ -189,9 +196,22 @@
 	"dashboard.home-page.order-quantity": "К-сть замовлень",
 	"dashboard.home-page.projects-in-process": "Проектів в роботі:",
 	"dashboard.home-page.projects-in-queue": "Проектів в черзі:",
+	"dashboard.home-page.ranks.subtitle": "Мій рівень професійності і тарифний план",
+	"dashboard.home-page.ranks.title": "Мої досягнення",
 	"dashboard.home-page.show-details": "Дізнатися деталі",
 	"dashboard.home-page.user-availability": "Статус доступності:",
 	"dashboard.home-page.user-status": "Статус вашого профілю",
+	"dashboard.offer-steps.fifth.description": "Додайте питання для замовника, які нададуть Вам необхідну інформацію, щоб Ви могли приступити до замовлення.",
+	"dashboard.offer-steps.fifth.title": "Бриф",
+	"dashboard.offer-steps.first.description": "Успіх вибору Вашої послуги залежить наскільки якісно і точно Ви назвете послуги та заповніть критерії пошуку.",
+	"dashboard.offer-steps.first.title": "Титульна інформація",
+	"dashboard.offer-steps.forth.description": "Складіть список поширених запитань від клієнтів.",
+	"dashboard.offer-steps.forth.title": "Поширені запитання",
+	"dashboard.offer-steps.last.title": "Готово до публікації",
+	"dashboard.offer-steps.second.description": "Опишіть послугу, яку ви пропонуєте, як можна докладніше.",
+	"dashboard.offer-steps.second.title": "Опис послуги",
+	"dashboard.offer-steps.third.description": "Запропонуйте покупцеві три пакети послуг за різною ціною.",
+	"dashboard.offer-steps.third.title": "Пакети та ціни",
 	"dashboard.payment-history.contragent": "Контрагент",
 	"dashboard.payment-history.date": "Дата операції",
 	"dashboard.payment-history.dealCanceled": "Скасування резервації засобів",
@@ -204,6 +224,13 @@
 	"dashboard.payment-history.sum": "Сума",
 	"dashboard.payment-history.title": "історія платежів",
 	"dashboard.payment-history.type": "Тип операції",
+	"dashboard.services.change-service": "Редагувати",
+	"dashboard.services.create-service": "Створити послугу",
+	"dashboard.services.delete-service-title": "Ви дійсно бажаєте видалити послугу",
+	"dashboard.services.empty-page-subtitle": "Щоб почати роботу, Вам необхідно создайть послугу.",
+	"dashboard.services.empty-page-title": "Сторінка порожня!",
+	"dashboard.services.hide-service": "Приховати послугу",
+	"dashboard.services.title": "Мої послуги",
 	"dealRate.firstRateCustomerCount1": "",
 	"dealRate.firstRateCustomerCount2": "",
 	"dealRate.firstRateCustomerCount3": "",
@@ -240,9 +267,11 @@
 	"file-loader.load": "Завантажити",
 	"file-loader.load-file": "Завантажте файли",
 	"file-loader.put-file-here": "Перетягніть сюди файл",
-	"general.cancel": "Відхилити",
+	"general.cancel": "Скасувати",
 	"general.congratulate": "Вітаємо",
 	"general.customer": "Замовник",
+	"general.decline": "Відхилити",
+	"general.delete": "Видалити",
 	"general.enter": "Увійти",
 	"general.exit": "Вийти",
 	"general.file": "Файл",
