user-page translate

--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -267,23 +267,34 @@
 	"file-loader.load": "Завантажити",
 	"file-loader.load-file": "Завантажте файли",
 	"file-loader.put-file-here": "Перетягніть сюди файл",
+	"general.additional-education": "Додаткова освіта",
 	"general.cancel": "Скасувати",
+	"general.city": "місто",
+	"general.comments": "відгуки",
 	"general.congratulate": "Вітаємо",
+	"general.country": "країна",
 	"general.customer": "Замовник",
 	"general.decline": "Відхилити",
 	"general.delete": "Видалити",
+	"general.education": "Вища освіта",
 	"general.enter": "Увійти",
 	"general.exit": "Вийти",
 	"general.file": "Файл",
 	"general.freelancer": "Фрілансер",
+	"general.from": "від",
 	"general.income": "Дохід",
+	"general.level": "Рівень",
 	"general.money-output": "виведення грошей",
 	"general.offline": "Офлайн",
 	"general.online": "Онлайн",
 	"general.password": "Пароль",
+	"general.period-of-execution": "Термін виконання",
+	"general.registration-date": "На сайті з",
 	"general.roll": "згорнути",
 	"general.save": "Зберегти",
 	"general.send": "надіслати",
+	"general.services": "послуги",
+	"general.show-more": "показати більше",
 	"general.show-profile": "дивитися профіль",
 	"general.success": "Підтвердити",
 	"general.time.month": "Місяць",
@@ -307,6 +318,13 @@
 	"menu.my-services": "Мої послуги",
 	"menu.projects": "Проекти",
 	"menu.settings": "Налаштування",
+	"raitings.average-rating": "Середня оцінка",
+	"raitings.contact-level": "Контактність",
+	"raitings.period-of-execution": "Термін виконання",
+	"raitings.politness-of-freelancer": "Ввічливість фрілансера",
+	"raitings.requirements-clarity": "Чіткість вимог",
+	"raitings.service-quality": "Якість послуг",
+	"raitings.task-clarity": "Постановка задачі",
 	"ranks.first.deal-compleated": "Закриття першої угоди",
 	"ranks.first.first-offer-creation": "Створення першої послуги",
 	"ranks.first.profile-filling": "Заповнення профілю",
@@ -326,6 +344,21 @@
 	"user-fields.compleated-deals": "Виконано замовлень",
 	"user-fields.country": "Країна",
 	"user-fields.speeking-language": "Розмовна мова",
+	"user-page.accessibility-status": "Статус доступності",
+	"user-page.arbitration-appeals": "Звернень до арбітражу",
+	"user-page.btn-customer-profile": "профіль замовника",
+	"user-page.btn-freelancer-profile": "Профіль фрілансера",
+	"user-page.ended-works": "Виконаних проектів",
+	"user-page.freelancer-services": "Послуги фрілансера",
+	"user-page.general-raiting": "Загальний рейтинг",
+	"user-page.help-message": "* Кожен користувач даної біржі може бути одночасно виконавцем і замовником, в залежності від потреби.",
+	"user-page.knowledge-of-languages": "знання мов",
+	"user-page.number-of-orders": "Кількість замовлень",
+	"user-page.projects-awaiting": "Проектів в черзі",
+	"user-page.projects-in-progress": "Проектів в роботі",
+	"user-page.unknown-completion\n": "не вказано",
+	"user-page.user-busy": "завантажений",
+	"user-page.user-free": "вільний",
 	"user-pie-chart.compleatedDeals": "Завершени",
 	"user-pie-chart.falledDeals": "Провалени",
 	"user-pie-chart.inProgress": "В процесси"
