--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -341,16 +341,22 @@
 	"file-loader.load": "Загрузить",
 	"file-loader.load-file": "Загрузите файлы",
 	"file-loader.put-file-here": "Перетащите сюда файл",
-	"general.additional-education": "Дополнительное образование",
+	"general.about-freelancer": "О фрилансере",
 	"general.add": "Добавить",
+	"general.additional-education": "Дополнительное образование",
+	"general.authorize": "Авторизируйтесь",
 	"general.cancel": "Отмена",
+	"general.choose": "выбрать",
 	"general.city": "город",
+	"general.close": "Закрыть",
 	"general.comments": "отзывы",
 	"general.congratulate": "Поздравляем",
 	"general.country": "страна",
 	"general.customer": "Заказчик",
+	"general.days": "дней",
 	"general.decline": "ОТКЛОНИТЬ",
 	"general.delete": "Удалить",
+	"general.description": "описание",
 	"general.education": "Высшее образование",
 	"general.enter": "Войти",
 	"general.exit": "Выйти",
@@ -360,11 +366,14 @@
 	"general.income": "доход",
 	"general.level": "Уровень",
 	"general.money-output": "вывод денег",
+	"general.of": "из",
 	"general.offline": "Офлайн",
 	"general.online": "Онлайн",
 	"general.open": "открыть",
 	"general.password": "Пароль",
 	"general.period-of-execution": "Срок исполнения",
+	"general.price": "Цена",
+	"general.rating": "рейтинг",
 	"general.registration-date": "На сайте с",
 	"general.roll": "свернуть",
 	"general.save": "Сохранить",
@@ -394,16 +403,17 @@
 	"menu.my-services": "Мои услуги",
 	"menu.projects": "Проекты",
 	"menu.settings": "Настройки",
+	"packages.basic": "Базовый",
+	"packages.premium": "Премиум",
+	"packages.standart": "Стандарт",
 	"raitings.average-rating": "Средняя оценка",
 	"raitings.contact-level": "Контактность",
 	"raitings.period-of-execution": "Срок исполнения",
 	"raitings.politness-of-freelancer": "Вежливость фрилансера",
 	"raitings.requirements-clarity": "Чёткость требований",
-	"raitings.service-quality": "Качество услуг",
+	"raitings.service-quality": "Качество услуги",
+	"raitings.services-quality": "Качество услуг",
 	"raitings.task-clarity": "Постановка задачи",
-	"packages.basic": "Базовый",
-	"packages.premium": "Премиум",
-	"packages.standart": "Стандарт",
 	"ranks.first.deal-compleated": "Закрытие первой сделки",
 	"ranks.first.first-offer-creation": "Создание первой услуги",
 	"ranks.first.profile-filling": "Заполнение профиля",
@@ -417,6 +427,44 @@
 	"ranks.zero.emal-confirmation": "Подтверждение почты",
 	"ranks.zero.registration": "Регистрация",
 	"ranks.zero.title": "Стартовый",
+	"service-page.add-to-service": "добавить к услуге",
+	"service-page.additional-edits": "Дополнительные правки",
+	"service-page.additional-options": "Дополнительные опции",
+	"service-page.another-services": "Другие услуги фрилансера",
+	"service-page.answer-time": "Время ответа",
+	"service-page.checkout-title": "Добавить дополнительные опции к услуге?",
+	"service-page.commercial-use": "Коммерческое использование",
+	"service-page.commision": "Комиссия за сервис",
+	"service-page.compare-deadline": "Срок выполнения",
+	"service-page.compare-number-of-edits": "Кол-во правок",
+	"service-page.compare-service-packages": "Сравнить пакеты услуг",
+	"service-page.compare-tab-service-name": "Название услуги",
+	"service-page.compare-tab-short-description": "Краткое описание",
+	"service-page.compare-title": "Сравните и выберите вариант пакета услуг",
+	"service-page.corrections": "правок",
+	"service-page.days-of-completion": "дней выполнения",
+	"service-page.description": "Описание услуги",
+	"service-page.final-price": "конечная стоимость",
+	"service-page.more-services": "больше услуг в профиле",
+	"service-page.not-authorized-message1": "Вы не можите заказать услугу пока не авторизируетесь",
+	"service-page.not-authorized-message2": "Зарегистрируйтесь если вы ещё этого не сделали",
+	"service-page.order-service": "Заказать услугу",
+	"service-page.packages-and-services": "пакеты и услуги",
+	"service-page.portfolio": "Портфолио",
+	"service-page.questions": "Вопросы и ответы",
+	"service-page.questions-title": "Часто задаваемые вопросы",
+	"service-page.select-advanced-options": "выбрать дополнительные опции",
+	"service-page.service-rating": "Рейтинг услуги",
+	"service-page.short-time": "Сжатые сроки",
+	"service-page.similar-start-from": "начиная от",
+	"service-page.similar-title": "Похожие услуги",
+	"service-page.step-brief-filling": "Заполнение брифа",
+	"service-page.step-select-advanced-options": "Выбор дополнительных опций",
+	"service-page.step-select-package": "Выбор пакета услуг",
+	"service-page.submit-info-message": "*Подтверждение заказа не является его оплатой.",
+	"service-page.submit-service": "Подтвердить заказ",
+	"service-page.total-cost-without--options": "Общая стоимость (без доп. опций)",
+	"service-page.your-choice-of-service": "ваш выбор услуги",
 	"syte-title.dashboard": "Дашбоард",
 	"user-fields.answer-time": "Среднее время ответа",
 	"user-fields.arbitr": "Арбитраж",
@@ -435,6 +483,7 @@
 	"user-page.number-of-orders": "Количество заказов",
 	"user-page.projects-awaiting": "Проектов в очереди",
 	"user-page.projects-in-progress": "Проектов в работе",
+	"user-page.unknown-completion": "",
 	"user-page.unknown-completion\n": "не указано",
 	"user-page.user-busy": "загружен",
 	"user-page.user-free": "свободен",
