--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -341,16 +341,22 @@
 	"file-loader.load": "Завантажити",
 	"file-loader.load-file": "Завантажте файли",
 	"file-loader.put-file-here": "Перетягніть сюди файл",
-	"general.additional-education": "Додаткова освіта",
+	"general.about-freelancer": "Про фрілансера",
 	"general.add": "Додати",
+	"general.additional-education": "Додаткова освіта",
+	"general.authorize": "Авторизуйтесь",
 	"general.cancel": "Скасувати",
+	"general.choose": "вибрати",
 	"general.city": "місто",
+	"general.close": "Закрити",
 	"general.comments": "відгуки",
 	"general.congratulate": "Вітаємо",
 	"general.country": "країна",
 	"general.customer": "Замовник",
+	"general.days": "днів",
 	"general.decline": "Відхилити",
 	"general.delete": "Видалити",
+	"general.description": "опис",
 	"general.education": "Вища освіта",
 	"general.enter": "Увійти",
 	"general.exit": "Вийти",
@@ -360,11 +366,14 @@
 	"general.income": "Дохід",
 	"general.level": "Рівень",
 	"general.money-output": "виведення грошей",
+	"general.of": "з",
 	"general.offline": "Офлайн",
 	"general.online": "Онлайн",
 	"general.open": "відкрити",
 	"general.password": "Пароль",
 	"general.period-of-execution": "Термін виконання",
+	"general.price": "Ціна",
+	"general.rating": "рейтинг",
 	"general.registration-date": "На сайті з",
 	"general.roll": "згорнути",
 	"general.save": "Зберегти",
@@ -394,16 +403,17 @@
 	"menu.my-services": "Мої послуги",
 	"menu.projects": "Проекти",
 	"menu.settings": "Налаштування",
+	"packages.basic": "Базовий",
+	"packages.premium": "Преміум",
+	"packages.standart": "Стандарт",
 	"raitings.average-rating": "Середня оцінка",
 	"raitings.contact-level": "Контактність",
 	"raitings.period-of-execution": "Термін виконання",
 	"raitings.politness-of-freelancer": "Ввічливість фрілансера",
 	"raitings.requirements-clarity": "Чіткість вимог",
-	"raitings.service-quality": "Якість послуг",
+	"raitings.service-quality": "Якість послуги",
+	"raitings.services-quality": "Якість послуг",
 	"raitings.task-clarity": "Постановка задачі",
-	"packages.basic": "Базовий",
-	"packages.premium": "Преміум",
-	"packages.standart": "Стандарт",
 	"ranks.first.deal-compleated": "Закриття першої угоди",
 	"ranks.first.first-offer-creation": "Створення першої послуги",
 	"ranks.first.profile-filling": "Заповнення профілю",
@@ -417,6 +427,44 @@
 	"ranks.zero.emal-confirmation": "Підтвердження пошти",
 	"ranks.zero.registration": "Реєстрація",
 	"ranks.zero.title": "Стартовий",
+	"service-page.add-to-service": "додати до послуги",
+	"service-page.additional-edits": "Додаткові правки",
+	"service-page.additional-options": "Додаткові опції",
+	"service-page.another-services": "Інші послуги фрілансера",
+	"service-page.answer-time": "Час відповіді",
+	"service-page.checkout-title": "Додати додаткові опції до послуги?",
+	"service-page.commercial-use": "Комерційне використання",
+	"service-page.commision": "Комісія за сервіс",
+	"service-page.compare-deadline": "Термін виконання",
+	"service-page.compare-number-of-edits": "Кількість правок",
+	"service-page.compare-service-packages": "Порівняти пакети послуг",
+	"service-page.compare-tab-service-name": "Назва послуги",
+	"service-page.compare-tab-short-description": "Короткий опис",
+	"service-page.compare-title": "Порівняйте і виберіть варіант пакету послуг",
+	"service-page.corrections": "правок",
+	"service-page.days-of-completion": "днів виконання",
+	"service-page.description": "Опис послуги",
+	"service-page.final-price": "кінцева вартість",
+	"service-page.more-services": "більше послуг в профілі",
+	"service-page.not-authorized-message1": "Ви не можите замовити послугу поки не авторизуєтес",
+	"service-page.not-authorized-message2": "Увійдіть якщо ви ще цього не зробили",
+	"service-page.order-service": "Замовити послугу",
+	"service-page.packages-and-services": "пакети і послуги",
+	"service-page.portfolio": "Портфоліо",
+	"service-page.questions": "Питання та відповіді",
+	"service-page.questions-title": "Часто задавані питання",
+	"service-page.select-advanced-options": "вибрати додаткові опції",
+	"service-page.service-rating": "Рейтинг послуги",
+	"service-page.short-time": "Стислі терміни",
+	"service-page.similar-start-from": "починаючи від",
+	"service-page.similar-title": "Схожі послуги",
+	"service-page.step-brief-filling": "Заповнення бріфу",
+	"service-page.step-select-advanced-options": "Вибір додаткових опцій",
+	"service-page.step-select-package": "Вибір пакета послуг",
+	"service-page.submit-info-message": "* Підтвердження замовлення не є його оплатою.",
+	"service-page.submit-service": "Підтвердити замовлення",
+	"service-page.total-cost-without--options": "Загальна вартість (без доп. Опцій)",
+	"service-page.your-choice-of-service": "ваш вибір послуги",
 	"syte-title.dashboard": "Дашбоард",
 	"user-fields.answer-time": "Середній час відповіді",
 	"user-fields.arbitr": "Арбітраж",
@@ -435,7 +483,8 @@
 	"user-page.number-of-orders": "Кількість замовлень",
 	"user-page.projects-awaiting": "Проектів в черзі",
 	"user-page.projects-in-progress": "Проектів в роботі",
-	"user-page.unknown-completion\n": "не вказано",
+	"user-page.unknown-completion": "не вказано",
+	"user-page.unknown-completion\n": "",
 	"user-page.user-busy": "завантажений",
 	"user-page.user-free": "вільний",
 	"user-pie-chart.compleatedDeals": "Завершени",
