--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -345,6 +345,7 @@
 	"general.add": "Добавить",
 	"general.additional-education": "Дополнительное образование",
 	"general.authorize": "Авторизируйтесь",
+	"general.avatar": "Аватар",
 	"general.cancel": "Отмена",
 	"general.choose": "выбрать",
 	"general.city": "город",
@@ -363,9 +364,13 @@
 	"general.file": "Файл",
 	"general.freelancer": "Фрилансер",
 	"general.from": "от",
+	"general.gender": "Пол",
+	"general.gender-female": "Женский",
+	"general.gender-male": "Мужской",
 	"general.income": "доход",
 	"general.level": "Уровень",
 	"general.money-output": "вывод денег",
+	"general.name": "Имя",
 	"general.of": "из",
 	"general.offline": "Офлайн",
 	"general.online": "Онлайн",
@@ -382,6 +387,7 @@
 	"general.show-more": "показать больше",
 	"general.show-profile": "смотреть профиль",
 	"general.success": "Подтвердить",
+	"general.surname": "Фамилия",
 	"general.time.month": "Месяц",
 	"general.time.year": "Год",
 	"general.unroll": "развернуть",
@@ -489,5 +495,30 @@
 	"user-page.user-free": "свободен",
 	"user-pie-chart.compleatedDeals": "Завершеные",
 	"user-pie-chart.falledDeals": "Проваленные",
-	"user-pie-chart.inProgress": "В процессе"
+	"user-pie-chart.inProgress": "В процессе",
+	"user-settings.about-user": "О себе",
+	"user-settings.academic-degree": "Учёная степень",
+	"user-settings.add-education": "Добавить образование",
+	"user-settings.add-lang": "Добавить язык",
+	"user-settings.alert-incorrect-symbols": "Поле заполнено неверно. Спецсимволы и цифры запрещены",
+	"user-settings.alert-min-length3": "Минимальное количество символов 3",
+	"user-settings.alert-required": "Это обязательное поле",
+	"user-settings.course-finish": "Окончание",
+	"user-settings.course-name": "Название курсов",
+	"user-settings.course-start": "Начало",
+	"user-settings.date-of-birth": "Дата рождения",
+	"user-settings.done-message": "Изменения успешно сохранены",
+	"user-settings.education-end": "Год окончания",
+	"user-settings.education-start": "Год старта",
+	"user-settings.institution-name": "Учебное заведение",
+	"user-settings.language": "Язык",
+	"user-settings.language-level": "Уровень владения",
+	"user-settings.location-title": "Местоположение и языки",
+	"user-settings.main-title": "Общие",
+	"user-settings.max-symbols1200": "из 1200 максимально",
+	"user-settings.notifications-title": "Уведомления",
+	"user-settings.onload-diploma": "Загрузить файл/фото диплома",
+	"user-settings.security-title": "Безопасность",
+	"user-settings.specialty": "Специальность",
+	"user-settings.tell-about-yourself": "Расскажите о себе"
 }
