--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -345,6 +345,7 @@
 	"general.add": "Додати",
 	"general.additional-education": "Додаткова освіта",
 	"general.authorize": "Авторизуйтесь",
+	"general.avatar": "Аватар",
 	"general.cancel": "Скасувати",
 	"general.choose": "вибрати",
 	"general.city": "місто",
@@ -363,9 +364,13 @@
 	"general.file": "Файл",
 	"general.freelancer": "Фрілансер",
 	"general.from": "від",
+	"general.gender": "Стать",
+	"general.gender-female": "Жіноча",
+	"general.gender-male": "Чоловіча",
 	"general.income": "Дохід",
 	"general.level": "Рівень",
 	"general.money-output": "виведення грошей",
+	"general.name": "Ім'я",
 	"general.of": "з",
 	"general.offline": "Офлайн",
 	"general.online": "Онлайн",
@@ -382,6 +387,7 @@
 	"general.show-more": "показати більше",
 	"general.show-profile": "дивитися профіль",
 	"general.success": "Підтвердити",
+	"general.surname": "Прізвище",
 	"general.time.month": "Місяць",
 	"general.time.year": "Рік",
 	"general.unroll": "розгорнути",
@@ -489,5 +495,30 @@
 	"user-page.user-free": "вільний",
 	"user-pie-chart.compleatedDeals": "Завершени",
 	"user-pie-chart.falledDeals": "Провалени",
-	"user-pie-chart.inProgress": "В процесси"
+	"user-pie-chart.inProgress": "В процесси",
+	"user-settings.about-user": "Про себе",
+	"user-settings.academic-degree": "Наукова ступінь",
+	"user-settings.add-education": "Додати освіту",
+	"user-settings.add-lang": "Додати мову",
+	"user-settings.alert-incorrect-symbols": "Поле заповнене невірно. Спецсимволи і цифри заборонені",
+	"user-settings.alert-min-length3": "Мінімальна кількість символів 3",
+	"user-settings.alert-required": "Це обов'язкове поле",
+	"user-settings.course-finish": "Закінчення",
+	"user-settings.course-name": "Назва курсів",
+	"user-settings.course-start": "Початок",
+	"user-settings.date-of-birth": "Дата народження",
+	"user-settings.done-message": "Зміни успішно збережені",
+	"user-settings.education-end": "Рік закінчення",
+	"user-settings.education-start": "Рік старту",
+	"user-settings.institution-name": "Навчальний заклад",
+	"user-settings.language": "Мова",
+	"user-settings.language-level": "Рівень володіння",
+	"user-settings.location-title": "Місцезнаходження та мови",
+	"user-settings.main-title": "Загальні",
+	"user-settings.max-symbols1200": "з 1200 максимально",
+	"user-settings.notifications-title": "Сповіщення",
+	"user-settings.onload-diploma": "Завантажити файл/фото диплома",
+	"user-settings.security-title": "Безпека",
+	"user-settings.specialty": "спеціальність",
+	"user-settings.tell-about-yourself": "Розкажіть про себе"
 }
