--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -368,6 +368,11 @@
 	"general.gender-female": "Женский",
 	"general.gender-male": "Мужской",
 	"general.income": "доход",
+	"general.language-lvl.1-lvl": "Начальный",
+	"general.language-lvl.2-lvl": "Средний",
+	"general.language-lvl.3-lvl": "Продвинутый",
+	"general.language-lvl.4-lvl": "Свободно владею",
+	"general.language-lvl.5-lvl": "Носитель",
 	"general.level": "Уровень",
 	"general.money-output": "вывод денег",
 	"general.name": "Имя",
@@ -395,6 +400,9 @@
 	"general.user-free": "свободен",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Как это работает",
+	"home-page.search-subtitle": "Gigrum - онлайн биржа фрилансеров для бизнеса",
+	"home-page.search-title": "Десятки тысяч услуг, скорость и качество исполнения именно здесь",
+	"home-page.to-catalog": "перейти в каталог",
 	"languages.change-language": "Изменить язык",
 	"languages.ru-full": "Русский",
 	"languages.uk-full": "Украинский",
@@ -502,22 +510,37 @@
 	"user-settings.add-lang": "Добавить язык",
 	"user-settings.alert-incorrect-symbols": "Поле заполнено неверно. Спецсимволы и цифры запрещены",
 	"user-settings.alert-min-length3": "Минимальное количество символов 3",
+	"user-settings.alert-oldpass-incorrect": "Старый пароль введен неверно",
 	"user-settings.alert-required": "Это обязательное поле",
+	"user-settings.change-mail-fail": "E-mail неизменен",
+	"user-settings.change-mail-succes": "E-mail изменен",
+	"user-settings.change-mail-title": "Изменение E-mail адреса",
+	"user-settings.change-password-title": "Смена пароля",
 	"user-settings.course-finish": "Окончание",
 	"user-settings.course-name": "Название курсов",
 	"user-settings.course-start": "Начало",
+	"user-settings.current-mail": "Ваш текущий e-mail",
 	"user-settings.date-of-birth": "Дата рождения",
+	"user-settings.do-not-match": "Пароли не совпадает",
 	"user-settings.done-message": "Изменения успешно сохранены",
 	"user-settings.education-end": "Год окончания",
 	"user-settings.education-start": "Год старта",
+	"user-settings.enter-current-password": "Введите текущий пароль",
+	"user-settings.field-invalid": "Поле заполнено неверно",
 	"user-settings.institution-name": "Учебное заведение",
 	"user-settings.language": "Язык",
 	"user-settings.language-level": "Уровень владения",
 	"user-settings.location-title": "Местоположение и языки",
 	"user-settings.main-title": "Общие",
 	"user-settings.max-symbols1200": "из 1200 максимально",
+	"user-settings.new-mail": "Ваш новый e-mail",
+	"user-settings.new-password": "Новый пароль (если необходимо изменить)",
 	"user-settings.notifications-title": "Уведомления",
+	"user-settings.old-password": "Старый пароль",
 	"user-settings.onload-diploma": "Загрузить файл/фото диплома",
+	"user-settings.passwords-dont-match": "Пароли не совпадают",
+	"user-settings.repeat-new-password": "Повторите новый пароль",
+	"user-settings.save-changes": "сохранить изменения",
 	"user-settings.security-title": "Безопасность",
 	"user-settings.specialty": "Специальность",
 	"user-settings.tell-about-yourself": "Расскажите о себе"
