--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -368,6 +368,11 @@
 	"general.gender-female": "Жіноча",
 	"general.gender-male": "Чоловіча",
 	"general.income": "Дохід",
+	"general.language-lvl.1-lvl": "Початковий",
+	"general.language-lvl.2-lvl": "Середній",
+	"general.language-lvl.3-lvl": "Продвинутий",
+	"general.language-lvl.4-lvl": "Вільно володію",
+	"general.language-lvl.5-lvl": "Рідна",
 	"general.level": "Рівень",
 	"general.money-output": "виведення грошей",
 	"general.name": "Ім'я",
@@ -395,6 +400,9 @@
 	"general.user-free": "вільний",
 	"header.catalog": "Каталог",
 	"header.how_it_works": "Як це працює",
+	"home-page.search-subtitle": "Gigrum - онлайн біржа фрілансерів для бізнесу",
+	"home-page.search-title": "Десятки тисяч послуг, швидкість і якість виконання саме тут",
+	"home-page.to-catalog": "перейти до каталогу",
 	"languages.change-language": "Змінити мову",
 	"languages.ru-full": "Російська",
 	"languages.uk-full": "Українська",
@@ -502,22 +510,37 @@
 	"user-settings.add-lang": "Додати мову",
 	"user-settings.alert-incorrect-symbols": "Поле заповнене невірно. Спецсимволи і цифри заборонені",
 	"user-settings.alert-min-length3": "Мінімальна кількість символів 3",
+	"user-settings.alert-oldpass-incorrect": "Старий пароль введений невірно",
 	"user-settings.alert-required": "Це обов'язкове поле",
+	"user-settings.change-mail-fail": "E-mail не змінено",
+	"user-settings.change-mail-succes": "E-mail змінено",
+	"user-settings.change-mail-title": "Зміна E-mail адреси",
+	"user-settings.change-password-title": "Зміна пароля",
 	"user-settings.course-finish": "Закінчення",
 	"user-settings.course-name": "Назва курсів",
 	"user-settings.course-start": "Початок",
+	"user-settings.current-mail": "Ваш поточний e-mail",
 	"user-settings.date-of-birth": "Дата народження",
+	"user-settings.do-not-match": "",
 	"user-settings.done-message": "Зміни успішно збережені",
 	"user-settings.education-end": "Рік закінчення",
 	"user-settings.education-start": "Рік старту",
+	"user-settings.enter-current-password": "Введіть поточний пароль",
+	"user-settings.field-invalid": "Поле заповнене невірно",
 	"user-settings.institution-name": "Навчальний заклад",
 	"user-settings.language": "Мова",
 	"user-settings.language-level": "Рівень володіння",
 	"user-settings.location-title": "Місцезнаходження та мови",
 	"user-settings.main-title": "Загальні",
 	"user-settings.max-symbols1200": "з 1200 максимально",
+	"user-settings.new-mail": "Ваш новий e-mail",
+	"user-settings.new-password": "Новий пароль (якщо необхідно змінити)",
 	"user-settings.notifications-title": "Сповіщення",
+	"user-settings.old-password": "Старий пароль",
 	"user-settings.onload-diploma": "Завантажити файл/фото диплома",
+	"user-settings.passwords-dont-match": "Паролі не збігається",
+	"user-settings.repeat-new-password": "Повторіть новий пароль",
+	"user-settings.save-changes": "зберегти зміни",
 	"user-settings.security-title": "Безпека",
 	"user-settings.specialty": "спеціальність",
 	"user-settings.tell-about-yourself": "Розкажіть про себе"
